; ModuleID = '/home/carl/AnghaBench/openssl/test/testutil/extr_tests.c_test_BN_even.c'
source_filename = "/home/carl/AnghaBench/openssl/test/testutil/extr_tests.c_test_BN_even.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"BIGNUM\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"EVEN(\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c")\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test_BN_even(i8* %0, i32 %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %4
  %13 = load i32*, i32** %9, align 8
  %14 = call i32 @BN_is_odd(i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %12
  store i32 1, i32* %5, align 4
  br label %23

17:                                               ; preds = %12, %4
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = load i32*, i32** %9, align 8
  %22 = call i32 @test_fail_bignum_mono_message(i32* null, i8* %18, i32 %19, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* %20, i32* %21)
  store i32 0, i32* %5, align 4
  br label %23

23:                                               ; preds = %17, %16
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @BN_is_odd(i32*) #1

declare dso_local i32 @test_fail_bignum_mono_message(i32*, i8*, i32, i8*, i8*, i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
